testsuite/tests/interpreter_errors/invalid_kind/test.out
script.lkql:1:12: error: Invalid kind name
1 | select p @ PreposterouslyInvalidKind
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^ 

